--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "normalize.css": "^8.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hotkeys-hook": "^2.1.4",
     "react-monaco-editor": "^0.36.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
