--- a/.env
+++ b/.env
@@ -1,9 +1,6 @@
 # Node environment, controlling some Gatsby optimisations. Required.
 
 REACT_APP_API_URL=http://localhost:3001
-
-
-# Auth0 
-REACT_APP_AUTH0_DOMAIN: dev-flash.au.auth0.com
-REACT_APP_AUTH0_CLIENT_ID: jSymDYQn00hqIGGR6Mgne6v5wu1JWwNr
-REACT_APP_AUTH0_AUDIENCE: https://flash-backend.netlify.app
+REACT_APP_AUTH0_DOMAIN=dev-flash.au.auth0.com
+REACT_APP_AUTH0_CLIENT_ID=jSymDYQn00hqIGGR6Mgne6v5wu1JWwNr
+REACT_APP_AUTH0_AUDIENCE=https://flash-backend.netlify.app
