migrate database to atlas

--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 # Node environment, controlling some Gatsby optimisations. Required.
 
 REACT_APP_STAGING_API_URL=http://localhost:3001
-REACT_APP_PROD_API_URL=https://dev-drill-backend.herokuapp.com
+# REACT_APP_PROD_API_URL=https://dev-drill-backend.herokuapp.com
+REACT_APP_PROD_API_URL=http://localhost:3001
 REACT_APP_AUTH0_DOMAIN=dev-flash.au.auth0.com
 REACT_APP_AUTH0_CLIENT_ID=jSymDYQn00hqIGGR6Mgne6v5wu1JWwNr
 REACT_APP_AUTH0_AUDIENCE=https://flash-backend.netlify.app
