--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "react-monaco-editor": "^0.36.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "styled-components": "^4.4.1",
-    "serve": "^11.3.2"
+    "serve": "^11.3.2",
+    "styled-components": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
